Mapache/Mapache/Grammar/MapacheParser.swift
// Generated from Mapache.g4 by ANTLR 4.7.1
import Antlr4

open class MapacheParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = MapacheParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(MapacheParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, MAPACHE = 1, INT = 2, CHAR = 3, FLOAT = 4, BOOL = 5, VOID = 6, 
                 FUNC = 7, RETURN = 8, VAR = 9, PRINT = 10, IF = 11, ELSE = 12, 
                 WHILE = 13, FOR = 14, IN = 15, DOTS = 16, BY = 17, PLUS = 18, 
                 MINUS = 19, MULTIPLY = 20, DIVISION = 21, ASSIGN = 22, 
                 EQUAL = 23, NOT = 24, NOT_EQUAL = 25, LESS_THAN = 26, GREATER_THAN = 27, 
                 AND = 28, OR = 29, OPEN_BRACKET = 30, CLOSE_BRACKET = 31, 
                 OPEN_PAREN = 32, CLOSE_PAREN = 33, OPEN_CURLY = 34, CLOSE_CURLY = 35, 
                 COMMA = 36, COLON = 37, DOT = 38, SEMICOLON = 39, ARROW = 40, 
                 TRUE = 41, FALSE = 42, TEXT = 43, CONST_I = 44, CONST_F = 45, 
                 CONST_B = 46, CONST_C = 47, ID = 48, WS = 49
	}

	public
	static let RULE_mapache = 0, RULE_program = 1, RULE_asignacion = 2, RULE_llamada = 3, 
            RULE_condicion = 4, RULE_variable = 5, RULE_funcion = 6, RULE_bloque = 7, 
            RULE_bloquefunc = 8, RULE_estatuto = 9, RULE_expresion = 10, 
            RULE_exp = 11, RULE_termino = 12, RULE_factor = 13, RULE_vector = 14, 
            RULE_ciclo = 15, RULE_cicloWhile = 16, RULE_cicloFor = 17, RULE_imprimir = 18, 
            RULE_tipo = 19, RULE_cte = 20, RULE_condicionLista = 21, RULE_condicionTermina = 22, 
            RULE_condicionElse = 23, RULE_cicloInicia = 24, RULE_cicloTermina = 25

	public
	static let ruleNames: [String] = [
		"mapache", "program", "asignacion", "llamada", "condicion", "variable", 
		"funcion", "bloque", "bloquefunc", "estatuto", "expresion", "exp", "termino", 
		"factor", "vector", "ciclo", "cicloWhile", "cicloFor", "imprimir", "tipo", 
		"cte", "condicionLista", "condicionTermina", "condicionElse", "cicloInicia", 
		"cicloTermina"
	]

	private static let _LITERAL_NAMES: [String?] = [
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "MAPACHE", "INT", "CHAR", "FLOAT", "BOOL", "VOID", "FUNC", "RETURN", 
		"VAR", "PRINT", "IF", "ELSE", "WHILE", "FOR", "IN", "DOTS", "BY", "PLUS", 
		"MINUS", "MULTIPLY", "DIVISION", "ASSIGN", "EQUAL", "NOT", "NOT_EQUAL", 
		"LESS_THAN", "GREATER_THAN", "AND", "OR", "OPEN_BRACKET", "CLOSE_BRACKET", 
		"OPEN_PAREN", "CLOSE_PAREN", "OPEN_CURLY", "CLOSE_CURLY", "COMMA", "COLON", 
		"DOT", "SEMICOLON", "ARROW", "TRUE", "FALSE", "TEXT", "CONST_I", "CONST_F", 
		"CONST_B", "CONST_C", "ID", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Mapache.g4" }

	override open
	func getRuleNames() -> [String] { return MapacheParser.ruleNames }

	override open
	func getSerializedATN() -> String { return MapacheParser._serializedATN }

	override open
	func getATN() -> ATN { return MapacheParser._ATN }

	override open
	func getVocabulary() -> Vocabulary {
	    return MapacheParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,MapacheParser._ATN,MapacheParser._decisionToDFA, MapacheParser._sharedContextCache)
	}

	public class MapacheContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.EOF.rawValue, 0)
			}
			open
			func program() -> [ProgramContext] {
				return getRuleContexts(ProgramContext.self)
			}
			open
			func program(_ i: Int) -> ProgramContext? {
				return getRuleContext(ProgramContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_mapache
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterMapache(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitMapache(self)
			}
		}
	}
	@discardableResult
	 open func mapache() throws -> MapacheContext {
		var _localctx: MapacheContext = MapacheContext(_ctx, getState())
		try enterRule(_localctx, 0, MapacheParser.RULE_mapache)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(53) 
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	repeat {
		 		setState(52)
		 		try program()


		 		setState(55); 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	} while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == MapacheParser.Tokens.MAPACHE.rawValue
		 	      return testSet
		 	 }())
		 	setState(57)
		 	try match(MapacheParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ProgramContext: ParserRuleContext {
			open
			func MAPACHE() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.MAPACHE.rawValue, 0)
			}
			open
			func bloque() -> BloqueContext? {
				return getRuleContext(BloqueContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_program
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterProgram(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitProgram(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 2, MapacheParser.RULE_program)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(59)
		 	try match(MapacheParser.Tokens.MAPACHE.rawValue)
		 	setState(60)
		 	try bloque()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AsignacionContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ID.rawValue, 0)
			}
			open
			func ASSIGN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ASSIGN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func OPEN_BRACKET() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_BRACKET.rawValue, 0)
			}
			open
			func exp() -> ExpContext? {
				return getRuleContext(ExpContext.self, 0)
			}
			open
			func CLOSE_BRACKET() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_BRACKET.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_asignacion
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterAsignacion(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitAsignacion(self)
			}
		}
	}
	@discardableResult
	 open func asignacion() throws -> AsignacionContext {
		var _localctx: AsignacionContext = AsignacionContext(_ctx, getState())
		try enterRule(_localctx, 4, MapacheParser.RULE_asignacion)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(62)
		 	try match(MapacheParser.Tokens.ID.rawValue)
		 	setState(67)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == MapacheParser.Tokens.OPEN_BRACKET.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(63)
		 		try match(MapacheParser.Tokens.OPEN_BRACKET.rawValue)
		 		setState(64)
		 		try exp()
		 		setState(65)
		 		try match(MapacheParser.Tokens.CLOSE_BRACKET.rawValue)

		 	}

		 	setState(69)
		 	try match(MapacheParser.Tokens.ASSIGN.rawValue)
		 	setState(70)
		 	try expresion()
		 	setState(71)
		 	try match(MapacheParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LlamadaContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ID.rawValue, 0)
			}
			open
			func OPEN_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_PAREN.rawValue, 0)
			}
			open
			func CLOSE_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_PAREN.rawValue, 0)
			}
			open
			func expresion() -> [ExpresionContext] {
				return getRuleContexts(ExpresionContext.self)
			}
			open
			func expresion(_ i: Int) -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(MapacheParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(MapacheParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_llamada
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterLlamada(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitLlamada(self)
			}
		}
	}
	@discardableResult
	 open func llamada() throws -> LlamadaContext {
		var _localctx: LlamadaContext = LlamadaContext(_ctx, getState())
		try enterRule(_localctx, 6, MapacheParser.RULE_llamada)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(73)
		 	try match(MapacheParser.Tokens.ID.rawValue)
		 	setState(74)
		 	try match(MapacheParser.Tokens.OPEN_PAREN.rawValue)
		 	setState(83)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, MapacheParser.Tokens.MINUS.rawValue,MapacheParser.Tokens.OPEN_PAREN.rawValue,MapacheParser.Tokens.CONST_I.rawValue,MapacheParser.Tokens.CONST_F.rawValue,MapacheParser.Tokens.CONST_B.rawValue,MapacheParser.Tokens.CONST_C.rawValue,MapacheParser.Tokens.ID.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(75)
		 		try expresion()
		 		setState(80)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == MapacheParser.Tokens.COMMA.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(76)
		 			try match(MapacheParser.Tokens.COMMA.rawValue)
		 			setState(77)
		 			try expresion()


		 			setState(82)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}

		 	}

		 	setState(85)
		 	try match(MapacheParser.Tokens.CLOSE_PAREN.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class CondicionContext: ParserRuleContext {
			open
			func IF() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.IF.rawValue, 0)
			}
			open
			func OPEN_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_PAREN.rawValue, 0)
			}
			open
			func expresion() -> ExpresionContext? {
				return getRuleContext(ExpresionContext.self, 0)
			}
			open
			func CLOSE_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_PAREN.rawValue, 0)
			}
			open
			func condicionLista() -> CondicionListaContext? {
				return getRuleContext(CondicionListaContext.self, 0)
			}
			open
			func bloque() -> [BloqueContext] {
				return getRuleContexts(BloqueContext.self)
			}
			open
			func bloque(_ i: Int) -> BloqueContext? {
				return getRuleContext(BloqueContext.self, i)
			}
			open
			func condicionTermina() -> CondicionTerminaContext? {
				return getRuleContext(CondicionTerminaContext.self, 0)
			}
			open
			func ELSE() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ELSE.rawValue, 0)
			}
			open
			func condicionElse() -> CondicionElseContext? {
				return getRuleContext(CondicionElseContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_condicion
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterCondicion(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitCondicion(self)
			}
		}
	}
	@discardableResult
	 open func condicion() throws -> CondicionContext {
		var _localctx: CondicionContext = CondicionContext(_ctx, getState())
		try enterRule(_localctx, 8, MapacheParser.RULE_condicion)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(87)
		 	try match(MapacheParser.Tokens.IF.rawValue)
		 	setState(88)
		 	try match(MapacheParser.Tokens.OPEN_PAREN.rawValue)
		 	setState(89)
		 	try expresion()
		 	setState(90)
		 	try match(MapacheParser.Tokens.CLOSE_PAREN.rawValue)
		 	setState(91)
		 	try condicionLista()
		 	setState(92)
		 	try bloque()
		 	setState(97)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == MapacheParser.Tokens.ELSE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(93)
		 		try match(MapacheParser.Tokens.ELSE.rawValue)
		 		setState(94)
		 		try condicionElse()
		 		setState(95)
		 		try bloque()

		 	}

		 	setState(99)
		 	try condicionTermina()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableContext: ParserRuleContext {
			open
			func VAR() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.VAR.rawValue, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ID.rawValue, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.COLON.rawValue, 0)
			}
			open
			func tipo() -> TipoContext? {
				return getRuleContext(TipoContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func OPEN_BRACKET() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_BRACKET.rawValue, 0)
			}
			open
			func CONST_I() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CONST_I.rawValue, 0)
			}
			open
			func CLOSE_BRACKET() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_BRACKET.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_variable
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterVariable(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitVariable(self)
			}
		}
	}
	@discardableResult
	 open func variable() throws -> VariableContext {
		var _localctx: VariableContext = VariableContext(_ctx, getState())
		try enterRule(_localctx, 10, MapacheParser.RULE_variable)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(101)
		 	try match(MapacheParser.Tokens.VAR.rawValue)
		 	setState(102)
		 	try match(MapacheParser.Tokens.ID.rawValue)
		 	setState(106)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == MapacheParser.Tokens.OPEN_BRACKET.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(103)
		 		try match(MapacheParser.Tokens.OPEN_BRACKET.rawValue)
		 		setState(104)
		 		try match(MapacheParser.Tokens.CONST_I.rawValue)
		 		setState(105)
		 		try match(MapacheParser.Tokens.CLOSE_BRACKET.rawValue)

		 	}

		 	setState(108)
		 	try match(MapacheParser.Tokens.COLON.rawValue)
		 	setState(109)
		 	try tipo()
		 	setState(110)
		 	try match(MapacheParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FuncionContext: ParserRuleContext {
			open
			func FUNC() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.FUNC.rawValue, 0)
			}
			open
			func ID() -> [TerminalNode] {
				return getTokens(MapacheParser.Tokens.ID.rawValue)
			}
			open
			func ID(_ i:Int) -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ID.rawValue, i)
			}
			open
			func OPEN_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_PAREN.rawValue, 0)
			}
			open
			func CLOSE_PAREN() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_PAREN.rawValue, 0)
			}
			open
			func ARROW() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.ARROW.rawValue, 0)
			}
			open
			func bloquefunc() -> BloquefuncContext? {
				return getRuleContext(BloquefuncContext.self, 0)
			}
			open
			func VOID() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.VOID.rawValue, 0)
			}
			open
			func tipo() -> [TipoContext] {
				return getRuleContexts(TipoContext.self)
			}
			open
			func tipo(_ i: Int) -> TipoContext? {
				return getRuleContext(TipoContext.self, i)
			}
			open
			func COLON() -> [TerminalNode] {
				return getTokens(MapacheParser.Tokens.COLON.rawValue)
			}
			open
			func COLON(_ i:Int) -> TerminalNode? {
				return getToken(MapacheParser.Tokens.COLON.rawValue, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(MapacheParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(MapacheParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_funcion
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterFuncion(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitFuncion(self)
			}
		}
	}
	@discardableResult
	 open func funcion() throws -> FuncionContext {
		var _localctx: FuncionContext = FuncionContext(_ctx, getState())
		try enterRule(_localctx, 12, MapacheParser.RULE_funcion)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(112)
		 	try match(MapacheParser.Tokens.FUNC.rawValue)
		 	setState(113)
		 	try match(MapacheParser.Tokens.ID.rawValue)
		 	setState(114)
		 	try match(MapacheParser.Tokens.OPEN_PAREN.rawValue)
		 	setState(127)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == MapacheParser.Tokens.ID.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(115)
		 		try match(MapacheParser.Tokens.ID.rawValue)
		 		setState(116)
		 		try match(MapacheParser.Tokens.COLON.rawValue)
		 		setState(117)
		 		try tipo()
		 		setState(124)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == MapacheParser.Tokens.COMMA.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(118)
		 			try match(MapacheParser.Tokens.COMMA.rawValue)
		 			setState(119)
		 			try match(MapacheParser.Tokens.ID.rawValue)
		 			setState(120)
		 			try match(MapacheParser.Tokens.COLON.rawValue)
		 			setState(121)
		 			try tipo()


		 			setState(126)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}

		 	}

		 	setState(129)
		 	try match(MapacheParser.Tokens.CLOSE_PAREN.rawValue)
		 	setState(130)
		 	try match(MapacheParser.Tokens.ARROW.rawValue)
		 	setState(133)
		 	try _errHandler.sync(self)
		 	switch (MapacheParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .VOID:
		 		setState(131)
		 		try match(MapacheParser.Tokens.VOID.rawValue)

		 		break
		 	case .INT:fallthrough
		 	case .CHAR:fallthrough
		 	case .FLOAT:fallthrough
		 	case .BOOL:
		 		setState(132)
		 		try tipo()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		 	setState(135)
		 	try bloquefunc()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BloqueContext: ParserRuleContext {
			open
			func OPEN_CURLY() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.OPEN_CURLY.rawValue, 0)
			}
			open
			func CLOSE_CURLY() -> TerminalNode? {
				return getToken(MapacheParser.Tokens.CLOSE_CURLY.rawValue, 0)
			}
			open
			func estatuto() -> [EstatutoContext] {
				return getRuleContexts(EstatutoContext.self)
			}
			open
			func estatuto(_ i: Int) -> EstatutoContext? {
				return getRuleContext(EstatutoContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return MapacheParser.RULE_bloque
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.enterBloque(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? MapacheListener {
				listener.exitBloque(self)
			}
		}
	}
	@discardableResult
	 open func bloque() throws -> BloqueContext {
		var _localctx: BloqueContext = BloqueContext(_ctx, getState())
		try enterRule(_localctx, 14, MapacheParser.RULE_bloque)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(137)
		 	try match(MapacheParser.Tokens.OPEN_CURLY.rawValue)
		 	setState(141)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, MapacheParser.Tokens.FUNC.rawValue,MapacheParser.Tokens.VAR.rawValue,MapacheParser.Tokens.PRINT.rawValue,MapacheParser.Tokens.IF.rawValue,MapacheParser.Tokens.WHILE.rawValue,MapacheParser.Tokens.FOR.rawValue,MapacheParser.Tokens.ID.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(138)
		 		try estatuto()


		 		setState(143)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(144)
		 	try match(MapacheParser.Tokens.CLOSE_CURLY.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
